--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nodemon --exec 'mocha -R min'"
+    "test": "nodemon --exec \"mocha -R min\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
