--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.7.5",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "nyc": "^14.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
