--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "test": "nyc --reporter=text nodemon --exec \"mocha -R min\""
   },
   "dependencies": {
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
