--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "nyc --reporter=text nodemon --exec \"mocha -R min\""
+    "test": "mocha"
+
   },
   "dependencies": {
     "chai-http": "^4.3.0",
