--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha"
+    "test": "nyc --reporter=text nodemon --exec \"mocha -R min\""
 
   },
   "dependencies": {
