--- a/package.json
+++ b/package.json
@@ -21,4 +21,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.3.3"
   }
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
+  }
 }
