--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "axois": "0.0.1-security",
     "express": "^4.17.1",
     "react": "^16.11.0",
