--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
