--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.2.1",
+    "@devexpress/dx-react-scheduler": "^2.2.1",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.2.1",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "axois": "0.0.1-security",
     "express": "^4.17.1",
