--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "crawler": "^1.2.1",
     "express": "^4.17.1",
     "mongodb": "^3.3.3",
-    "mongoose": "^5.7.5"
+    "mongoose": "^5.7.5",
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "sleep": "^6.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
