--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "test": "nyc --reporter=text nodemon --exec \"mocha -R min\""
   },
   "dependencies": {
@@ -22,11 +22,18 @@
     "jade": "~1.11.0",
     "mongoose": "^5.7.11",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.4",
     "nyc": "^14.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.2"
-  }
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4"
+  },
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
