--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "axois": "0.0.1-security",
     "express": "^4.17.1",
     "formik": "^2.0.3",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-moment": "^0.9.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
