--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,16 @@
     "axois": "0.0.1-security",
     "express": "^4.17.1",
     "formik": "^2.0.3",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-moment": "^0.9.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "reactjs-popup": "^1.5.0"
+    "react-scripts": "^3.3.0",
+    "reactjs-popup": "^1.5.0",
+    "universal-cookie": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
