--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "axois": "0.0.1-security",
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "formik": "^2.0.3",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-moment": "^0.9.7",
     "react-router": "^5.1.2",
