--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-scroll-up-button": "^1.6.4",
     "reactjs-popup": "^1.5.0",
     "universal-cookie": "^4.0.2"
   },
